[gd_scene load_steps=6 format=1]

[ext_resource path="res://src/world/midlevel.gd" type="Script" id=1]
[ext_resource path="res://art/sprites/btn_play.png" type="Texture" id=2]
[ext_resource path="res://art/fonts/exo2.fnt" type="BitmapFont" id=3]

[sub_resource type="Animation" id=2]

resource/name = "show"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 300, 300 )

[node name="midlevel" type="Node2D"]

transform/pos = Vector2( -18.0185, 0 )
script/script = ExtResource( 1 )

[node name="btn" type="Node2D" parent="."]

transform/scale = Vector2( 0.2, 0.2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="btn"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/show = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "show"

[node name="tch_continue" type="TouchScreenButton" parent="btn"]

transform/pos = Vector2( -97.5853, -126.94 )
transform/scale = Vector2( 1, 1 )
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = SubResource( 1 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="label_continue" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -313.0
margin/top = -266.0
margin/right = -111.0
margin/bottom = -215.0
custom_fonts/font = ExtResource( 3 )
text = "Continue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_node" type="Node2D" parent="."]

[node name="label_rank" type="Label" parent="label_node"]

visibility/visible = false
rect/scale = Vector2( 2.5, 2.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -471.0
margin/top = 130.0
margin/right = -88.0
margin/bottom = 181.0
custom_fonts/font = ExtResource( 3 )
text = "Rank so far - 3nd"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="btn/tch_continue" to="." method="_on_tch_continue_pressed"]


